# FlappyPDSII

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  RodaTesteCadastro  RodaTesteFimDeJogo  RodaTesteHighScore  RodaTestesTelaInicial  flappy_bird  jogadores.db
docs/CRCs/: Database.txt
docs/CRCs/Controladores/: Controlador.txt  Keybind.txt  Pontuador Strategy.txt  Pontuador.txt
docs/CRCs/Dados/: Dado_Jogador.txt  Database.txt  Logger.txt  dado.txt  objeto.txt
docs/CRCs/Fisica/: Colidivel.txt  Detector Colisão.txt  Hitbox.txt  Modulo Fisico.txt
docs/html/: GerenciadorHighScore_8hpp_source.html  GerenciadorHighScores_8hpp_source.html  TelaCadastro_8hpp.html  TelaCadastro_8hpp__incl.map  TelaCadastro_8hpp__incl.md5  TelaCadastro_8hpp_source.html  TelaHighScore_8hpp.html  TelaHighScore_8hpp__incl.map  TelaHighScore_8hpp__incl.md5  TelaHighScore_8hpp_source.html  TelaInicial_8hpp.html  TelaInicial_8hpp__incl.map  TelaInicial_8hpp__incl.md5  TelaInicial_8hpp_source.html  annotated.html  camada__background_8cpp.html  camada__background_8cpp__incl.map  camada__background_8cpp__incl.md5  camada__background_8hpp.html  camada__background_8hpp__dep__incl.map  camada__background_8hpp__dep__incl.md5  camada__background_8hpp__incl.map  camada__background_8hpp__incl.md5  camada__background_8hpp_source.html  classAcoes-members.html  classAcoes.html  classAcoes__coll__graph.dot  classAcoes__coll__graph.map  classAcoes__coll__graph.md5  classCamadaBackground-members.html  classCamadaBackground.html  classCano-members.html  classCano.html  classCano2-members.html  classCano2.html  classCano__coll__graph.map  classCano__coll__graph.md5  classCano__inherit__graph.map  classCano__inherit__graph.md5  classCirculo-members.html  (+2201 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  (+45 more)
include/: acoes.hpp  ator.hpp  config.hpp  controlador.hpp  estado_jogo.hpp  fisica.hpp  hitbox.hpp  info_colisao.hpp  keybind.hpp  objeto_cano.hpp  player.hpp  player_exception.hpp  regras_jogo.hpp  renderizador.hpp  sprite.hpp  tela_base.hpp  tela_jogo.hpp  util.hpp
include/controladores/: ator.hpp  controlador.hpp  estado_jogo.hpp  keybind.hpp  pontuador.hpp
include/dados/: config.hpp  dados.hpp  data_exception.hpp  database.hpp  logger.hpp  sqlite3.h
include/elementos/: exemplo.hpp
include/fisica/: fisica.hpp  hitbox.hpp  info_colisao.hpp
include/interface/: GerenciadorHighScore.hpp  GerenciadorHighScores.hpp  TelaCadastro.hpp  TelaFimdejogo.hpp  TelaHighScore.hpp  TelaInicial.hpp  camada_background.hpp  desenho.hpp  figuras_basicas.hpp  graficos.hpp  parallax_background.hpp  renderizador.hpp  tela_base.hpp  tela_fimdejogo.hpp  tela_jogo.hpp
src/: acoes.cpp  ator.cpp  controlador.cpp  info_colisao.cpp  main.cpp  objeto_cano.cpp  player.cpp  sprite.cpp  util.cpp
src/controladores/: controlador.cpp  keybind.cpp
src/dados/: dados.cpp  database.cpp  logger.cpp
src/fisica/: fisica.cpp  hitbox.cpp  info_colisao.cpp
src/interface/: GerenciadorHighScore.cpp  GerenciadorHighScores.cpp  TelaCadastro.cpp  TelaFimdejogo.cpp  TelaHighScore.cpp  TelaInicial.cpp  camada_background.cpp  figuras.cpp  parallax_background.cpp  renderizador.cpp  tela_fimdejogo.cpp  tela_jogo.cpp
tests/: CMakeLists.txt  leiame.txt  test_camada_background.cpp  test_parallax_background.cpp
tests/dados/: test_dados_jogador.cpp  test_database.cpp  test_database_sql.cpp  test_logger.cpp
tests/interface/: test_tela_cadastro.cpp  test_tela_fimdejogo.cpp  test_tela_highscore.cpp  test_tela_inicial.cpp
